# gpot

./: .gitignore  README.md  pyproject.toml
src/g_po_t/: __main__.py
src/gpot/: __main__.py
